src/FrontEnd/Grammar/ParLatte.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParLatte where
import LatteTypes
import LexLatte
import ErrM

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  '*' { PT _ (TS _ 7) }
  '+' { PT _ (TS _ 8) }
  '++' { PT _ (TS _ 9) }
  ',' { PT _ (TS _ 10) }
  '-' { PT _ (TS _ 11) }
  '--' { PT _ (TS _ 12) }
  '.' { PT _ (TS _ 13) }
  '/' { PT _ (TS _ 14) }
  ':' { PT _ (TS _ 15) }
  ';' { PT _ (TS _ 16) }
  '<' { PT _ (TS _ 17) }
  '<=' { PT _ (TS _ 18) }
  '=' { PT _ (TS _ 19) }
  '==' { PT _ (TS _ 20) }
  '>' { PT _ (TS _ 21) }
  '>=' { PT _ (TS _ 22) }
  '[' { PT _ (TS _ 23) }
  '[]' { PT _ (TS _ 24) }
  ']' { PT _ (TS _ 25) }
  'boolean' { PT _ (TS _ 26) }
  'class' { PT _ (TS _ 27) }
  'else' { PT _ (TS _ 28) }
  'extends' { PT _ (TS _ 29) }
  'false' { PT _ (TS _ 30) }
  'for' { PT _ (TS _ 31) }
  'if' { PT _ (TS _ 32) }
  'int' { PT _ (TS _ 33) }
  'new' { PT _ (TS _ 34) }
  'null' { PT _ (TS _ 35) }
  'return' { PT _ (TS _ 36) }
  'string' { PT _ (TS _ 37) }
  'true' { PT _ (TS _ 38) }
  'void' { PT _ (TS _ 39) }
  'while' { PT _ (TS _ 40) }
  '{' { PT _ (TS _ 41) }
  '||' { PT _ (TS _ 42) }
  '}' { PT _ (TS _ 43) }

L_ident  { PT _ (TV $$) }
L_integ  { PT _ (TI $$) }
L_quoted { PT _ (TL $$) }


%%

Ident   :: { Ident }   : L_ident  { Ident $1 }
Integer :: { Integer } : L_integ  { (read ( $1)) :: Integer }
String  :: { String }  : L_quoted {  $1 }

Program :: { Program }
Program : ListTopDef { LatteTypes.Program $1 }
TopDef :: { TopDef }
TopDef : FnDef { LatteTypes.TopFnDef $1 }
       | 'class' Ident 'extends' Ident '{' ListClsStmt '}' { LatteTypes.ClassExtDef $2 $4 $6 }
       | 'class' Ident '{' ListClsStmt '}' { LatteTypes.ClassDef $2 $4 }
ListTopDef :: { [TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }
ClsStmt :: { ClsStmt }
ClsStmt : FnDef { LatteTypes.FnProp $1 }
        | Type Ident ';' { LatteTypes.AttrProp $1 $2 }
ListClsStmt :: { [ClsStmt] }
ListClsStmt : ClsStmt { (:[]) $1 }
            | ClsStmt ListClsStmt { (:) $1 $2 }
Arg :: { Arg }
Arg : Type Ident { LatteTypes.Arg $1 $2 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
FnDef :: { FnDef }
FnDef : Type Ident '(' ListArg ')' Block { LatteTypes.FnDef $1 $2 $4 $6 }
Block :: { Block }
Block : '{' ListStmt '}' { LatteTypes.Block (reverse $2) }
ListStmt :: { [Stmt] }
ListStmt : {- empty -} { [] } | ListStmt Stmt { flip (:) $1 $2 }
Stmt :: { Stmt }
Stmt : ';' { LatteTypes.Empty }
     | Block { LatteTypes.BStmt $1 }
     | Type ListItem ';' { LatteTypes.Decl $1 $2 }
     | Expr '=' Expr ';' { LatteTypes.Ass $1 $3 }
     | Expr '++' ';' { LatteTypes.Incr $1 }
     | Expr '--' ';' { LatteTypes.Decr $1 }
     | 'return' Expr ';' { LatteTypes.Ret $2 }
     | 'return' ';' { LatteTypes.VRet }
     | 'if' '(' Expr ')' Stmt { LatteTypes.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { LatteTypes.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { LatteTypes.While $3 $5 }
     | Expr ';' { LatteTypes.SExp $1 }
     | 'for' '(' Type Ident ':' Expr ')' Stmt { LatteTypes.For $3 $4 $6 $8 }
Item :: { Item }
Item : Ident { LatteTypes.NoInit $1 }
     | Ident '=' Expr { LatteTypes.Init $1 $3 }
ListItem :: { [Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }
Type :: { Type }
Type : 'int' { LatteTypes.Int }
     | 'string' { LatteTypes.Str }
     | 'boolean' { LatteTypes.Bool }
     | 'void' { LatteTypes.Void }
     | Type '[]' { LatteTypes.ArrType $1 }
     | Ident { LatteTypes.ClsType $1 }
ListType :: { [Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }
Expr6 :: { Expr }
Expr6 : Ident { LatteTypes.EVar $1 }
      | Integer { LatteTypes.ELitInt $1 }
      | 'true' { LatteTypes.ELitTrue }
      | 'false' { LatteTypes.ELitFalse }
      | 'new' Type { LatteTypes.ENewCls $2 }
      | 'new' Type '[' Expr ']' { LatteTypes.ENewArr $2 $4 }
      | Ident '(' ListExpr ')' { LatteTypes.EApp $1 $3 }
      | Expr6 '.' Ident '(' ListExpr ')' { LatteTypes.EPropApp $1 $3 $5 }
      | Expr6 '.' Ident { LatteTypes.EProp $1 $3 }
      | Expr6 '[' Expr ']' { LatteTypes.EArrGet $1 $3 }
      | '(' Ident ')' 'null' { LatteTypes.ENullCast $2 }
      | String { LatteTypes.EString $1 }
      | '(' Expr ')' { $2 }
Expr5 :: { Expr }
Expr5 : '-' Expr6 { LatteTypes.Neg $2 }
      | '!' Expr6 { LatteTypes.Not $2 }
      | Expr6 { $1 }
Expr4 :: { Expr }
Expr4 : Expr4 MulOp Expr5 { LatteTypes.EMul $1 $2 $3 } | Expr5 { $1 }
Expr3 :: { Expr }
Expr3 : Expr3 AddOp Expr4 { LatteTypes.EAdd $1 $2 $3 } | Expr4 { $1 }
Expr2 :: { Expr }
Expr2 : Expr2 RelOp Expr3 { LatteTypes.ERel $1 $2 $3 } | Expr3 { $1 }
Expr1 :: { Expr }
Expr1 : Expr2 '&&' Expr1 { LatteTypes.EAnd $1 $3 } | Expr2 { $1 }
Expr :: { Expr }
Expr : Expr1 '||' Expr { LatteTypes.EOr $1 $3 } | Expr1 { $1 }
ListExpr :: { [Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }
AddOp :: { AddOp }
AddOp : '+' { LatteTypes.Plus } | '-' { LatteTypes.Minus }
MulOp :: { MulOp }
MulOp : '*' { LatteTypes.Times }
      | '/' { LatteTypes.Div }
      | '%' { LatteTypes.Mod }
RelOp :: { RelOp }
RelOp : '<' { LatteTypes.LTH }
      | '<=' { LatteTypes.LE }
      | '>' { LatteTypes.GTH }
      | '>=' { LatteTypes.GE }
      | '==' { LatteTypes.EQU }
      | '!=' { LatteTypes.NE }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    [] -> []
    [Err _] -> " due to lexer error"
    _ -> " before " ++ unwords (map (id . prToken) (take 4 ts))

myLexer = tokens
}
