src/FrontEnd/Grammar/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParLatte.y
-----------------------------------------------------------------------------

state 74 contains 1 shift/reduce conflicts.
state 78 contains 1 shift/reduce conflicts.
state 144 contains 1 shift/reduce conflicts.

rule 45 is unused
rule 46 is unused
rule 47 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> FnDef                                    (5)
	TopDef -> 'class' Ident 'extends' Ident '{' ListClsStmt '}'   (6)
	TopDef -> 'class' Ident '{' ListClsStmt '}'        (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	ClsStmt -> FnDef                                   (10)
	ClsStmt -> Type Ident ';'                          (11)
	ListClsStmt -> ClsStmt                             (12)
	ListClsStmt -> ClsStmt ListClsStmt                 (13)
	Arg -> Type Ident                                  (14)
	ListArg ->                                         (15)
	ListArg -> Arg                                     (16)
	ListArg -> Arg ',' ListArg                         (17)
	FnDef -> Type Ident '(' ListArg ')' Block          (18)
	Block -> '{' ListStmt '}'                          (19)
	ListStmt ->                                        (20)
	ListStmt -> ListStmt Stmt                          (21)
	Stmt -> ';'                                        (22)
	Stmt -> Block                                      (23)
	Stmt -> Type ListItem ';'                          (24)
	Stmt -> Expr '=' Expr ';'                          (25)
	Stmt -> Expr '++' ';'                              (26)
	Stmt -> Expr '--' ';'                              (27)
	Stmt -> 'return' Expr ';'                          (28)
	Stmt -> 'return' ';'                               (29)
	Stmt -> 'if' '(' Expr ')' Stmt                     (30)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (31)
	Stmt -> 'while' '(' Expr ')' Stmt                  (32)
	Stmt -> Expr ';'                                   (33)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (34)
	Item -> Ident                                      (35)
	Item -> Ident '=' Expr                             (36)
	ListItem -> Item                                   (37)
	ListItem -> Item ',' ListItem                      (38)
	Type -> 'int'                                      (39)
	Type -> 'string'                                   (40)
	Type -> 'boolean'                                  (41)
	Type -> 'void'                                     (42)
	Type -> Type '[]'                                  (43)
	Type -> Ident                                      (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	Expr6 -> Ident                                     (48)
	Expr6 -> Integer                                   (49)
	Expr6 -> 'true'                                    (50)
	Expr6 -> 'false'                                   (51)
	Expr6 -> 'new' Type                                (52)
	Expr6 -> 'new' Type '[' Expr ']'                   (53)
	Expr6 -> Ident '(' ListExpr ')'                    (54)
	Expr6 -> Expr6 '.' Ident '(' ListExpr ')'          (55)
	Expr6 -> Expr6 '.' Ident                           (56)
	Expr6 -> Expr6 '[' Expr ']'                        (57)
	Expr6 -> '(' Ident ')' 'null'                      (58)
	Expr6 -> String                                    (59)
	Expr6 -> '(' Expr ')'                              (60)
	Expr5 -> '-' Expr6                                 (61)
	Expr5 -> '!' Expr6                                 (62)
	Expr5 -> Expr6                                     (63)
	Expr4 -> Expr4 MulOp Expr5                         (64)
	Expr4 -> Expr5                                     (65)
	Expr3 -> Expr3 AddOp Expr4                         (66)
	Expr3 -> Expr4                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr1 -> Expr2 '&&' Expr1                          (70)
	Expr1 -> Expr2                                     (71)
	Expr -> Expr1 '||' Expr                            (72)
	Expr -> Expr1                                      (73)
	ListExpr ->                                        (74)
	ListExpr -> Expr                                   (75)
	ListExpr -> Expr ',' ListExpr                      (76)
	AddOp -> '+'                                       (77)
	AddOp -> '-'                                       (78)
	MulOp -> '*'                                       (79)
	MulOp -> '/'                                       (80)
	MulOp -> '%'                                       (81)
	RelOp -> '<'                                       (82)
	RelOp -> '<='                                      (83)
	RelOp -> '>'                                       (84)
	RelOp -> '>='                                      (85)
	RelOp -> '=='                                      (86)
	RelOp -> '!='                                      (87)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'null'         { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ListTopDef      rules 8, 9
	ClsStmt         rules 10, 11
	ListClsStmt     rules 12, 13
	Arg             rule  14
	ListArg         rules 15, 16, 17
	FnDef           rule  18
	Block           rule  19
	ListStmt        rules 20, 21
	Stmt            rules 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34
	Item            rules 35, 36
	ListItem        rules 37, 38
	Type            rules 39, 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	Expr6           rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60
	Expr5           rules 61, 62, 63
	Expr4           rules 64, 65
	Expr3           rules 66, 67
	Expr2           rules 68, 69
	Expr1           rules 70, 71
	Expr            rules 72, 73
	ListExpr        rules 74, 75, 76
	AddOp           rules 77, 78
	MulOp           rules 79, 80, 81
	RelOp           rules 82, 83, 84, 85, 86, 87

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	FnDef          goto state 7
	Type           goto state 8

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'++'           reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'--'           reduce using rule 44
	'.'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44
	L_ident        reduce using rule 44


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 17
	FnDef          goto state 7
	Type           goto state 8

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> FnDef .                                   (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_ident        reduce using rule 5
	%eof           reduce using rule 5


State 8

	FnDef -> Type . Ident '(' ListArg ')' Block         (rule 18)
	Type -> Type . '[]'                                 (rule 43)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 15

State 9

	Type -> 'boolean' .                                 (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'--'           reduce using rule 41
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_ident        reduce using rule 41


State 10

	TopDef -> 'class' . Ident 'extends' Ident '{' ListClsStmt '}'    (rule 6)
	TopDef -> 'class' . Ident '{' ListClsStmt '}'       (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 11

	Type -> 'int' .                                     (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	'++'           reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'--'           reduce using rule 39
	'.'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	']'            reduce using rule 39
	'||'           reduce using rule 39
	L_ident        reduce using rule 39


State 12

	Type -> 'string' .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'--'           reduce using rule 40
	'.'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_ident        reduce using rule 40


State 13

	Type -> 'void' .                                    (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	'++'           reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'--'           reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_ident        reduce using rule 42


State 14

	TopDef -> 'class' Ident . 'extends' Ident '{' ListClsStmt '}'    (rule 6)
	TopDef -> 'class' Ident . '{' ListClsStmt '}'       (rule 7)

	'extends'      shift, and enter state 19
	'{'            shift, and enter state 20


State 15

	FnDef -> Type Ident . '(' ListArg ')' Block         (rule 18)

	'('            shift, and enter state 18


State 16

	Type -> Type '[]' .                                 (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'++'           reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'--'           reduce using rule 43
	'.'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_ident        reduce using rule 43


State 17

	ListTopDef -> TopDef ListTopDef .                   (rule 9)

	%eof           reduce using rule 9


State 18

	FnDef -> Type Ident '(' . ListArg ')' Block         (rule 18)

	')'            reduce using rule 15
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 27
	Type           goto state 28

State 19

	TopDef -> 'class' Ident 'extends' . Ident '{' ListClsStmt '}'    (rule 6)

	L_ident        shift, and enter state 2

	Ident          goto state 25

State 20

	TopDef -> 'class' Ident '{' . ListClsStmt '}'       (rule 7)

	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClsStmt        goto state 21
	ListClsStmt    goto state 22
	FnDef          goto state 23
	Type           goto state 24

State 21

	ListClsStmt -> ClsStmt .                            (rule 12)
	ListClsStmt -> ClsStmt . ListClsStmt                (rule 13)

	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	'}'            reduce using rule 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClsStmt        goto state 21
	ListClsStmt    goto state 35
	FnDef          goto state 23
	Type           goto state 24

State 22

	TopDef -> 'class' Ident '{' ListClsStmt . '}'       (rule 7)

	'}'            shift, and enter state 34


State 23

	ClsStmt -> FnDef .                                  (rule 10)

	'boolean'      reduce using rule 10
	'int'          reduce using rule 10
	'string'       reduce using rule 10
	'void'         reduce using rule 10
	'}'            reduce using rule 10
	L_ident        reduce using rule 10


State 24

	ClsStmt -> Type . Ident ';'                         (rule 11)
	FnDef -> Type . Ident '(' ListArg ')' Block         (rule 18)
	Type -> Type . '[]'                                 (rule 43)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 33

State 25

	TopDef -> 'class' Ident 'extends' Ident . '{' ListClsStmt '}'    (rule 6)

	'{'            shift, and enter state 32


State 26

	ListArg -> Arg .                                    (rule 16)
	ListArg -> Arg . ',' ListArg                        (rule 17)

	')'            reduce using rule 16
	','            shift, and enter state 31


State 27

	FnDef -> Type Ident '(' ListArg . ')' Block         (rule 18)

	')'            shift, and enter state 30


State 28

	Arg -> Type . Ident                                 (rule 14)
	Type -> Type . '[]'                                 (rule 43)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 29

State 29

	Arg -> Type Ident .                                 (rule 14)

	')'            reduce using rule 14
	','            reduce using rule 14


State 30

	FnDef -> Type Ident '(' ListArg ')' . Block         (rule 18)

	'{'            shift, and enter state 40

	Block          goto state 39

State 31

	ListArg -> Arg ',' . ListArg                        (rule 17)

	')'            reduce using rule 15
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 38
	Type           goto state 28

State 32

	TopDef -> 'class' Ident 'extends' Ident '{' . ListClsStmt '}'    (rule 6)

	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClsStmt        goto state 21
	ListClsStmt    goto state 37
	FnDef          goto state 23
	Type           goto state 24

State 33

	ClsStmt -> Type Ident . ';'                         (rule 11)
	FnDef -> Type Ident . '(' ListArg ')' Block         (rule 18)

	'('            shift, and enter state 18
	';'            shift, and enter state 36


State 34

	TopDef -> 'class' Ident '{' ListClsStmt '}' .       (rule 7)

	'boolean'      reduce using rule 7
	'class'        reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7
	'void'         reduce using rule 7
	L_ident        reduce using rule 7
	%eof           reduce using rule 7


State 35

	ListClsStmt -> ClsStmt ListClsStmt .                (rule 13)

	'}'            reduce using rule 13


State 36

	ClsStmt -> Type Ident ';' .                         (rule 11)

	'boolean'      reduce using rule 11
	'int'          reduce using rule 11
	'string'       reduce using rule 11
	'void'         reduce using rule 11
	'}'            reduce using rule 11
	L_ident        reduce using rule 11


State 37

	TopDef -> 'class' Ident 'extends' Ident '{' ListClsStmt . '}'    (rule 6)

	'}'            shift, and enter state 42


State 38

	ListArg -> Arg ',' ListArg .                        (rule 17)

	')'            reduce using rule 17


State 39

	FnDef -> Type Ident '(' ListArg ')' Block .         (rule 18)

	'boolean'      reduce using rule 18
	'class'        reduce using rule 18
	'int'          reduce using rule 18
	'string'       reduce using rule 18
	'void'         reduce using rule 18
	'}'            reduce using rule 18
	L_ident        reduce using rule 18
	%eof           reduce using rule 18


State 40

	Block -> '{' . ListStmt '}'                         (rule 19)

	'!'            reduce using rule 20
	'('            reduce using rule 20
	'-'            reduce using rule 20
	';'            reduce using rule 20
	'boolean'      reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'if'           reduce using rule 20
	'int'          reduce using rule 20
	'new'          reduce using rule 20
	'return'       reduce using rule 20
	'string'       reduce using rule 20
	'true'         reduce using rule 20
	'void'         reduce using rule 20
	'while'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_ident        reduce using rule 20
	L_integ        reduce using rule 20
	L_quoted       reduce using rule 20

	ListStmt       goto state 41

State 41

	Block -> '{' ListStmt . '}'                         (rule 19)
	ListStmt -> ListStmt . Stmt                         (rule 21)

	'!'            shift, and enter state 56
	'('            shift, and enter state 57
	'-'            shift, and enter state 58
	';'            shift, and enter state 59
	'boolean'      shift, and enter state 9
	'false'        shift, and enter state 60
	'for'          shift, and enter state 61
	'if'           shift, and enter state 62
	'int'          shift, and enter state 11
	'new'          shift, and enter state 63
	'return'       shift, and enter state 64
	'string'       shift, and enter state 12
	'true'         shift, and enter state 65
	'void'         shift, and enter state 13
	'while'        shift, and enter state 66
	'{'            shift, and enter state 40
	'}'            shift, and enter state 67
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 69

	Ident          goto state 43
	Integer        goto state 44
	String         goto state 45
	Block          goto state 46
	Stmt           goto state 47
	Type           goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr4          goto state 51
	Expr3          goto state 52
	Expr2          goto state 53
	Expr1          goto state 54
	Expr           goto state 55

State 42

	TopDef -> 'class' Ident 'extends' Ident '{' ListClsStmt '}' .    (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 43

	Type -> Ident .                                     (rule 44)
	Expr6 -> Ident .                                    (rule 48)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 54)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	'('            shift, and enter state 106
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	'++'           reduce using rule 48
	'-'            reduce using rule 48
	'--'           reduce using rule 48
	'.'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'='            reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'['            reduce using rule 48
	'[]'           reduce using rule 44
	'||'           reduce using rule 48
	L_ident        reduce using rule 44


State 44

	Expr6 -> Integer .                                  (rule 49)
